Updated section four alignment fix

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+    margin: 0;
+}
+
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
@@ -150,9 +154,10 @@ body {
     margin: 100px 80px;
     color: #F9FAF8;
     border-radius: 10px;
+    justify-content: space-between;
     align-self: center;
     gap: 155px;
-    max-width: 1000px;
+    max-width: 1500px;
     min-width: 500px;
 } 
 
